<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main_title">Главная</string>
    <string name="favorite_title">Избранное</string>
    <string name="team_title">Команда</string>
    <string name="country_selection">Выбор страны</string>
    <string name="search_title">Поиск вакансий</string>
    <string name="search_hint">Введите запрос</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="settings_filtration">Настройки фильтрации</string>
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_the_amount">Введите сумму</string>
    <string name="not_show">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="cancel">Сбросить</string>
    <string name="text_team_fragment">Над приложением работали</string>
    <string name="vasiliy">Василий Герасименко</string>
    <string name="sergey">Сергей Клушин</string>
    <string name="dmitriy">Дмитрий Комаров</string>
    <string name="nadezhda">Надежда Сакал</string>
    <string name="team">Команда</string>
    <string name="favourites">Избранное</string>
    <string name="list_empty">Список пуст</string>
    <string name="to">до</string>
    <string name="from">от</string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="choose">Выбрать</string>
    <string name="region">Регион</string>
    <string name="country">Страна</string>
    <string name="choosing_a_place_to_work">Выбор места работы</string>
    <string name="select_region">Выбор региона</string>
    <string name="input_region">Введите регион</string>
    <string name="vacancy">Вакансия</string>
    <string name="android_developer">Android-разработчик</string>
    <string name="from_100_000">от 100 000 Р</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="no_info">Нет данных</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="name">Рога и Копыта Ltd</string>
    <string name="city">Нововасильчеково</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="similar_vacancy">Похожие вакансии</string>
    <string name="select_industry">Выбор отрасли</string>
    <string name="input_industry">Введите отрасль</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="error_list">Не удалось получить\n список вакансий</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_such_region">Такого региона нет</string>
    <string name="no_list">Не удалось получить список</string>

    <string name="delete_vacancy">Удалить вакансию</string>
    <string name="do_you_want_to_delete_a_vacancy">Вы хотите удалить вакансию?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="mail_client_not_found">Почтовый клиент не найден</string>

    <plurals name="vacancies">
        <item quantity="zero">Найдено %1$d вакансий</item>
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="two">Найдено %d вакансии</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>

</resources>