<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".team.ui.TeamFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/team_toolbar"
        style="@style/TextMedium_22_500"
        android:layout_height="@dimen/size_64"
        app:title="@string/team"
        app:titleTextColor="?attr/colorOnPrimary"
        app:navigationIcon="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <TextView
        android:id="@+id/text_team_fragment"
        style="@style/TextBold_32_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16"
        android:paddingHorizontal="@dimen/padding_16"
        android:paddingVertical="@dimen/padding_8"
        android:text="@string/text_team_fragment"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_toolbar" />

    <TextView
        android:id="@+id/developer_1"
        style="@style/TextMedium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/vasiliy"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_team_fragment" />

    <TextView
        android:id="@+id/developer_2"
        style="@style/TextMedium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/sergey"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_1" />

    <TextView
        android:id="@+id/developer_3"
        style="@style/TextMedium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/dmitriy"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_2" />

    <TextView
        android:id="@+id/developer_4"
        style="@style/TextMedium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/nadezhda"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_3" />
</androidx.constraintlayout.widget.ConstraintLayout>