<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vacancy.ui.VacancyFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vacancy_toolbar"
        style="@style/tool_bar"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/vacancy">

        <ImageView
            android:id="@+id/add_to_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/favorites"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_4"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/sharing"
            app:tint="?attr/colorOnPrimary" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/guide_begin_16"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="@dimen/guide_begin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="@dimen/layout_width_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/vacancy_toolbar"
        app:layout_constraintVertical_bias="0.00">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_0"
            android:layout_marginVertical="@dimen/margin_8"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar_for_load"
                android:layout_width="@dimen/size_36"
                android:layout_height="@dimen/size_36"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminateTint="@color/blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/vacancy_name"
                style="@style/TextBold_32_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                tools:text="@string/android_developer" />

            <TextView
                android:id="@+id/salary"
                style="@style/TextMedium_22_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                tools:text="@string/from_100_000" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:backgroundTint="@color/light_gray"
                app:cardCornerRadius="@dimen/corner_radius_12">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/company_name"
                    style="@style/TextMedium_22_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_72"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    app:layout_constraintBaseline_toBaselineOf="@id/icon"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/area"
                    style="@style/TextRegular_16_400"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_72"
                    android:layout_marginTop="@dimen/margin_44"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    tools:text="@string/city" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/experience_title"
                style="@style/TextMedium_16_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/required_experience"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/experience"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                tools:text="@string/no_info" />

            <TextView
                android:id="@+id/schedule_employment"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/no_info"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/description_title"
                style="@style/TextMedium_22_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_24"
                android:text="@string/vacancy_description"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/description"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:text="@string/no_info"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/key_skills_title"
                style="@style/TextMedium_22_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_24"
                android:text="@string/key_skills"
                android:textColor="?attr/colorOnPrimary"
                android:visibility="visible" />

            <TextView
                android:id="@+id/key_skills"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_16"
                android:text="@string/no_info"
                android:textColor="?attr/colorOnPrimary"
                android:visibility="visible" />

            <TextView
                android:id="@+id/contacts_title"
                style="@style/TextMedium_22_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_24"
                android:text="@string/contacts"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/contacts_person"
                style="@style/TextMedium_16_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:text="@string/contact_person"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/contacts_name"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/email"
                style="@style/TextMedium_16_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:text="@string/e_mail"
                android:textColor="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/contacts_email"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/phone"
                style="@style/TextMedium_16_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/contacts_phone"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/comment"
                style="@style/TextMedium_16_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_16"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/comment" />

            <TextView
                android:id="@+id/contacts_comment"
                style="@style/TextRegular_16_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_info"
                android:textColor="?attr/colorOnPrimary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_same_vacancy"
                style="@style/FilterBottomButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginVertical="@dimen/margin_24"
                android:background="@drawable/shape_button"
                android:text="@string/similar_vacancy"
                android:textColor="?attr/colorOnSurface"
                app:cornerRadius="@dimen/corner_radius_12" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_24"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>












