<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_filtration_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/baseline_arrow_back_24">

        <TextView
            android:id="@+id/toolbar_text"
            style="@style/TextMedium_22_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_18"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/settings_filtration"
            android:textColor="?attr/colorOnPrimary" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/work_place"
        style="@style/FilterStyle"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/work_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_filtration_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:backgroundTint="?attr/colorPrimary"
            android:id="@+id/work_place_text"
            style="@style/FilterEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/container_work_place_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/work_place"
        app:layout_constraintBottom_toBottomOf="@id/work_place">

        <ImageView
            android:id="@+id/area_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/industry"
        style="@style/FilterStyle"
        android:hint="@string/industry"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/padding_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/industry_text"
            android:backgroundTint="?attr/colorPrimary"
            style="@style/FilterEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/container_industry_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/industry"
        app:layout_constraintBottom_toBottomOf="@id/industry">

        <ImageView
            android:id="@+id/industry_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_text_layout"
        style="@style/FilterFrameLayoutSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:focusableInTouchMode="true"
        android:hint="@string/expected_salary"
        app:placeholderText="@string/enter_the_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/industry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salary"
            android:background="@drawable/shape_search"
            android:textCursorDrawable="@drawable/cursor"
            android:cursorVisible="false"
            style="@style/SalaryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/show_salary_text"
        style="@style/TextRegular_16_400"
        android:textColor="?attr/colorOnPrimary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:layout_marginVertical="@dimen/margin_16"
        android:paddingHorizontal="@dimen/margin_16"
        android:gravity="center_vertical"
        android:text="@string/not_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_text_layout" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_6"
        android:layout_gravity="center_vertical|end"
        android:buttonTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/show_salary_text"
        app:layout_constraintBottom_toBottomOf="@id/show_salary_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_button"
        style="@style/FilterBottomButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="@drawable/shape_button"
        android:text="@string/apply"
        android:textColor="?attr/colorOnSurface"
        app:cornerRadius="@dimen/corner_radius_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clear_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_button"
        style="@style/FilterBottomButtonsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24"
        android:background="?attr/colorPrimary"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textColor="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="apply_button,clear_button" />
</androidx.constraintlayout.widget.ConstraintLayout>